2006-02-10  J. Tang  <tang@jtang.org>

	* PagesManager man page: clarified [add] behavior and default
	state [bug 1305988]

2006-02-08  J. Tang  <tang@jtang.org>

	* combobox.tcl: allow -autocomplete with uppercase chars [bug
	996569]; added -autopost option [patch 1359041]

	* dynamic help man page: added clarification to -variable

2006-01-25  J. Tang  <tang@jtang.org>

	* buttonbox.tcl: fixed -homogeneous calculation [bug 1362899]

2005-11-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* color.tcl (SelectColor::menu): use native dialog for palette
	menu item where possible (and Widget::theme is used).

2005-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: correct Widget::theme typos

2005-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl (MainFrame::configure): need to ignore -bg change
	check when themed.

2005-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl (MainFrame::_create_menubar): ignore -bg -bd opts
	when themed

2005-09-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* font.tcl (SelectFont::_getfont): fix tile compat to still set
	data(family) and data(size) in any case.

2005-09-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl: 
	* font.tcl: remove tile compat options that aren't valid.

2005-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl: extend ttk theme awareness to subframes/separators

2005-08-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl (MainFrame::create): make ttk theme aware

2005-07-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: if themed, use ttk::separator
	* scrollframe.tcl: if themed, use ttk::frame
	* font.tcl: if themed, use ttk::comboboxes and ttk::checkbuttons
	* widget.tcl: encapsulate all .#BWidget* hidden widgets into a
	single frame .#BWidget to clean up main '.' childspace.
	Add 'Widget::theme ?boolean?' that, if enabled, has BWidgets try
	to use some ttk themed widgets (*very* incomplete).
