@@ -69,7 +69,8 @@ Specifies the desired height for the progress indicator.
 <DL><DT><A NAME="-maximum"><B>-maximum</B></A></DT>
 <DD>
 
-Specifies the maximum value of the variable.
+Specifies the maximum value of the variable.  This value must be
+greater than zero.
 
 </DD>
 </DL>
